# PixarUSDWriter

./: CMakeLists.txt  README.md
data/: box.usda  cube.ply  cube.usda  f16.ply  f16.usda  f16.usdc  out.usda
include/: PixarUSDWriter.h
src/: PixarUSDWriter.cpp  main.cpp
